--- a/src/config.h.in
+++ b/src/config.h.in
@@ -6,6 +6,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have the <jansson.h> header file. */
+#undef HAVE_JANSSON_H
+
 /* Define to 1 if you have the `cunit' library (-lcunit). */
 #undef HAVE_LIBCUNIT
 
