move json dumper into video subdirectory ...
.. it's the only thing which uses it it present

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,9 @@
+all:
+	for dir in video ; do \
+	  $(MAKE) -C $$dir all ; \
+	done
+
 clean :
-	for dir in dumper video ; do \
+	for dir in video ; do \
 	  $(MAKE) -C $$dir clean ; \
 	done
