--- a/examples/video/Makefile
+++ b/examples/video/Makefile
@@ -1,8 +1,14 @@
+all:
+	echo 'run "make png video"'
+
 video: make-mp4
 	./make-mp4 video.mp4
 
-png: make-png
+png: make-png bin/dumper
 	./make-png
+
+bin/dumper:
+	$(MAKE) -C dumper dumper
 
 clean-json:
 	find tmp -name '*.json' | xargs -r rm
@@ -10,6 +16,9 @@ clean-json:
 clean-png:
 	find tmp -name '*.png' | xargs -r rm
 
-clean: clean-json clean-png
+clean-dumper:
+	$(MAKE) -C dumper clean
+
+clean: clean-json clean-png clean-dumper
 
 .PHONY: plots json count-json clean-json clean
