create series plot data, stub for plotting script

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,9 +1,7 @@
+DIRS = video series
+
 all:
-	for dir in video ; do \
-	  $(MAKE) -C $$dir all ; \
-	done
+	for dir in $(DIRS) ; do $(MAKE) -C $$dir all ; done
 
 clean :
-	for dir in video ; do \
-	  $(MAKE) -C $$dir clean ; \
-	done
+	for dir in $(DIRS) ; do $(MAKE) -C $$dir clean ; done
