--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,7 @@
 # Makefile for CUnit test-suite
 
-OBJ = main.o tests.o tests_histogram.o tests_median.o tests_node.o
+OBJ = main.o tests.o assert_errno.o \
+	tests_histogram.o tests_median.o tests_node.o
 RUBBISH += $(OBJ) suite *~
 CFLAGS += -I../src
 LDLIBS += -lapvmedian -lm
