added a memcheck target for future generations

--- a/test/Makefile
+++ b/test/Makefile
@@ -14,6 +14,9 @@ include ../Common.mk
 run: suite
 	./suite -v
 
+memcheck: suite
+	valgrind --leak-check=full ./suite -v
+
 suite: $(OBJ)
 	$(CC) $(LDFLAGS) $(OBJ) $(LDLIBS) -o suite
 
