--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,7 @@ if test $opt_enable_tests = yes; then
    AC_DEFINE_UNQUOTED(CUNIT_213,
      $cunit213,
      [Define if CUnit version 2.1-3 or later])
+   prefix="$PWD/tmp"
 fi
 
 dnl | output
